--- a/software/esp32.ini
+++ b/software/esp32.ini
@@ -37,6 +37,7 @@ custom_backend_modules = ESP32 Brick
                          Coredump
                          Pwa
                          Certs
+                         Flight Control
 
 custom_frontend_modules = Device Name
                           Proxy
@@ -54,6 +55,7 @@ custom_frontend_modules = Device Name
                           Status Alerts
                           Network Group
                           System Group
+                          Flight Control
 
 custom_frontend_components = Proxy
                              Network Group $ Open
@@ -70,6 +72,7 @@ custom_frontend_components = Proxy
                                Event Log
                                Firmware Update
                              System Group $ Close
+                             Flight Control
 
 custom_frontend_status_components = Device Name
                                     Status Alerts
